# Muine

./: .gitignore  AGENTS.md  AUTHORS  ChangeLog  HACKING  MAINTAINERS  MIGRATION_STATUS.md  Makefile.am  Makefile.in  Muine.sln  NEWS  PLUGINS  README.NET10.md  README.md  TODO  UI_IMPROVEMENTS_SUMMARY.md  UI_LAYOUT_OVERVIEW.md  aclocal.m4  config.h.in  configure  configure.in  muine.snk  muine.spec  muine.spec.in
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
DBusLib/: AssemblyInfo.cs  IPlayer.cs  Makefile.am  Makefile.in  Player.cs
PluginLib/: AssemblyInfo.cs  IPlayer.cs  ISong.cs  Makefile.am  Makefile.in  Plugin.cs
data/: Makefile.am  Makefile.in  muine-dbus.pc.in  muine-plugin.pc.in  muine.desktop.in  muine.schemas.in  org.gnome.Muine.service.in
data/glade/: AddWindow.glade  GroupEditor.glade  InfoWindow.glade  Makefile.am  Makefile.in  NoMusicFoundWindow.glade  PlaylistFilling.glade  PlaylistWindow.glade  ProgressWindow.glade  SkipToWindow.glade
data/images/: Makefile.am  Makefile.in
data/ui/: Makefile.am  Makefile.in  PlaylistWindow.xml
doc/: Makefile.am  Makefile.in  muine-docs.source
doc/en/: Muine.DBusLib.xml  Muine.PluginLib.xml  index.xml
doc/en/Muine.DBusLib/: Player.xml  SongChangedHandler.xml  StateChangedHandler.xml
doc/en/Muine.PluginLib/: GenericEventHandler.xml  IPlayer.xml  ISong.xml  Plugin.xml  SongChangedEventHandler.xml  StateChangedEventHandler.xml  TickEventHandler.xml
docs/: HYBRID_YOUTUBE_IMPLEMENTATION.md  KEYBOARD_MEDIA_CONTROLS.md  MUSICBRAINZ_INTEGRATION.md  PLAYBACK_ARCHITECTURE.md  PROGRESS_BAR_SEEKING_FIX.md  RADIO_SEARCH_FEATURE.md  RADIO_SUPPORT.md  YOUTUBE_INTEGRATION_DESIGN_OPTIONS.md
libmuine/: Makefile.am  Makefile.in  db.c  db.h  macros.h  mm-keys.c  mm-keys.h  player-gst.c  player.h  pointer-list-model.c  pointer-list-model.h  rb-cell-renderer-pixbuf.c  rb-cell-renderer-pixbuf.h
plugins/: Inotify.cs  InotifyPlugin.cs  InotifyPlugin.dll.config.in  Makefile.am  Makefile.in  TrayIcon.cs  TrayIcon.dll.config  TrayIcon.xml  inotify-glue.c
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  lt.po  lv.po  mk.po  ms.po  nb.po  ne.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+10 more)
src/: About.cs  Actions.cs  AddAlbumWindow.cs  AddSongWindow.cs  AddWindow.cs  AddWindowEntry.cs  AddWindowList.cs  Album.cs  AmazonSearchService.wsdl  ColoredCellRendererPixbuf.cs  Config.cs  CoverDatabase.cs  CoverGetter.cs  CoverImage.cs  DBusService.cs  Database.cs  Defines.cs.in  DndUtils.cs  ErrorDialog.cs  FileSelector.cs  FileUtils.cs  Global.cs  GnomeMMKeys.cs  GnomeProxy.cs  HandleModel.cs  HandleView.cs  ImportDialog.cs  Item.cs  KeyUtils.cs  Makefile.am  Makefile.in  Metadata.cs  MmKeys.cs  MusicBrainz.cs  OpenDialog.cs  OverwriteDialog.cs  Player.cs  PlaylistWindow.cs  PluginManager.cs  ProgressWindow.cs  (+11 more)
src.net/Muine.App/: App.axaml  Muine.App.csproj  ViewLocator.cs  app.manifest
src.net/Muine.App/Converters/: PathToBitmapConverter.cs
src.net/Muine.App/ViewModels/: ArtistViewModel.cs  MainWindowViewModel.cs  MetadataEditorViewModel.cs  MusicLibraryViewModel.cs
src.net/Muine.App/Views/: MainWindow.axaml  MainWindow.axaml.cs  MetadataEditorWindow.axaml  MetadataEditorWindow.axaml.cs  MusicLibraryView.axaml  MusicLibraryView.axaml.cs  PlaylistView.axaml  PlaylistView.axaml.cs
src.net/Muine.Core/: Muine.Core.csproj
src.net/Muine.Core/Models/: Playlist.cs
src.net/Muine.Core/Services/: CoverArtService.cs  LibraryScannerService.cs  MetadataService.cs  MusicDatabaseService.cs  PlaybackService.cs
src/Muine.App/: App.axaml  App.axaml.cs  Muine.App.csproj  Program.cs
src/Muine.App/Converters/: DurationConverter.cs  PathToBitmapConverter.cs
src/Muine.App/ViewModels/: AddRadioStationViewModel.cs  AlbumViewModel.cs  ArtistViewModel.cs  MainWindowViewModel.cs  MetadataReviewViewModel.cs  MusicBrainzSearchViewModel.cs  MusicLibraryViewModel.cs  PlaylistViewModel.cs  RadioViewModel.cs  ViewModelBase.cs  YouTubeSearchViewModel.cs
src/Muine.App/Views/: AddRadioStationWindow.axaml  AddRadioStationWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MetadataEditorWindow.axaml  MetadataReviewWindow.axaml  MetadataReviewWindow.axaml.cs  MusicBrainzSearchWindow.axaml  MusicBrainzSearchWindow.axaml.cs  MusicLibraryView.axaml  MusicLibraryView.axaml.cs  RadioView.axaml  RadioView.axaml.cs  YouTubeSearchView.axaml  YouTubeSearchView.axaml.cs
src/Muine.Core/: Muine.Core.csproj
src/Muine.Core/Models/: Album.cs  LibraryConfiguration.cs  MusicBrainzMatch.cs  Playlist.cs  RadioCategory.cs  RadioStation.cs  Song.cs
src/Muine.Core/Services/: BackgroundTaggingQueue.cs  CoverArtService.cs  DebouncedActionService.cs  IMusicBrainzService.cs  LibraryConfigurationService.cs  LibraryScannerService.cs  LoggingService.cs  ManagedLibraryService.cs  MetadataEnhancementService.cs  MetadataService.cs  MprisService.cs  MusicBrainzService.cs  MusicDatabaseService.cs  PlaybackService.cs  RadioBrowserService.cs  RadioMetadataService.cs  RadioStationService.cs  YouTubeService.cs
tests/: Muine.Tests.csproj  UnitTest1.cs
tests/Models/: AlbumTests.cs  PlaylistTests.cs  RadioCategoryTests.cs  RadioStationTests.cs  SongTests.cs
tests/Services/: BackgroundTaggingQueueTests.cs  CoverArtServiceTests.cs  DatabaseMigrationTests.cs  IntegrationTests.cs  LibraryScannerServiceTests.cs  MetadataEnhancementServiceTests.cs  MetadataServiceTests.cs  MockMusicBrainzService.cs  MusicBrainzServiceTests.cs  MusicDatabaseServiceTests.cs  PlaybackServiceTests.cs  RadioBrowserServiceTests.cs  RadioStationServiceTests.cs  YouTubeServiceTests.cs
